pkg/story/testdata/negative/missing_name.story
Meta
    Id:        missing_name_fixture
    Tags:      helper
    Stations:  1

Scenario: Dummy scenario
    When  something happens
    Then  something is verified
